# zenquant

./: .gitignore  AnimationReadme.md  CHANGELOG.md  Cargo.toml  Cargo.toml.original.txt  DESIGN.md  FEEDBACK.md  FUTURE.md  README.crates.md  README.md  WASM128.md  justfile
.github/workflows/: ci.yml
apidoc/: Cargo.toml
benchmarks/: README.md  shared_oklab_buffer_2026-03-04.md  simd_bench_2026-03-03.md
docs/public-api/: ABLATION-zenquant.md  zenquant.features.txt  zenquant.internal.txt  zenquant.txt
examples/: QUANTIZER_COMPARISON.md  calibrate_jpeg.rs  calibrate_knobs.rs  calibrate_mpe.rs  compare.rs  compare_images.rs  compare_paths.rs  dither_sweep.rs  encode_gif.rs  encode_png.rs  encode_webp.rs  format_sizes.rs  hist_debug.rs  lambda_sweep.rs  profile_steps.rs  quantizer_comparison.html  quantizer_comparison.rs  speed_test.rs  time_only.rs
src/: blue_noise.rs  dither.rs  error.rs  histogram.rs  joint.rs  joint_predict.rs  lib.rs  masking.rs  median_cut.rs  metric.rs  oklab.rs  palette.rs  remap.rs  simd.rs  zengif_backend.rs  zennode_defs.md  zoint.rs  zoint_predict.rs
tests/: basic.rs  cancellation.rs  integration.rs  public_api_doc.rs  quality.rs  regress.rs  security_regression.rs
