[package]
name = "zenquant"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "AGPL-3.0-or-later"
description = "AQ-informed palette quantizer — perceptual masking meets color quantization"

[dependencies]
rgb = "0.8"
imgref = "1"
thiserror = { version = "2", default-features = false }
linear-srgb = { version = "0.4", default-features = false }

# Optional: zengif QuantizerTrait backend
zengif = { path = "../zengif", optional = true, default-features = false, features = ["std"] }
enough = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
imagequant = "4"
quantizr = "1"
flate2 = "1"
butteraugli = "0.4"
fast-ssim2 = { version = "0.6", features = ["imgref"] }
png = "0.17"
zengif = { path = "../zengif", features = ["quantizr"] }
zenwebp = { path = "../zenwebp", default-features = false, features = ["std", "pixel-types"] }
enough = "0.3"
imgref = "1"
codec-corpus = "1"

[features]
default = ["std"]
std = ["linear-srgb/std"]
zengif-backend = ["dep:zengif", "dep:enough", "std"]

[[example]]
name = "compare"
