[package]
name = "zenquant"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "AGPL-3.0-or-later"
description = "AQ-informed palette quantizer — perceptual masking meets color quantization"
repository = "https://github.com/imazen/zenquant"
documentation = "https://docs.rs/zenquant"
homepage = "https://github.com/imazen/zenquant"
keywords = ["quantize", "palette", "image", "color", "dither"]
categories = ["multimedia::images", "graphics"]
readme = "README.md"

include = ["/src", "LICENSE", "README.md"]

[dependencies]
rgb = "0.8"
imgref = "1"
thiserror = { version = "2", default-features = false }
linear-srgb = { version = "0.5", path = "../linear-srgb", default-features = false }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
imagequant = "4"
quantizr = "1"
flate2 = "1"
butteraugli = "0.4"
fast-ssim2 = { version = "0.6", features = ["imgref"] }
png = "0.18"
zengif = { path = "../zengif", features = ["quantizr"] }
zenwebp = { path = "../zenwebp", default-features = false, features = ["std", "pixel-types"] }
enough = "0.3"
imgref = "1"
codec-corpus = "1"
color_quant = "1"
dssim-core = { version = "3", default-features = false }
exoquant = "0.2"
gif = { version = "0.14", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = ["linear-srgb/std"]
# Expose internal modules for profiling/debugging examples. Not public API.
_dev = []

[[example]]
name = "compare"

[[example]]
name = "profile_steps"
required-features = ["_dev"]

[[example]]
name = "hist_debug"
required-features = ["_dev"]

[[example]]
name = "compare_paths"

[[example]]
name = "quantizer_comparison"
