# CI-free public-API snapshot runner — the only package depending on
# zenutils-apidoc. The parent is a single-package root (no [workspace]
# table), so this package's own empty [workspace] table keeps it fully
# standalone: plain `cargo test` and every CI job never compile the
# apidoc tree or run rustdoc. Regenerate via `just api-doc`.
#
# zenutils-apidoc 0.1.1 is the true minimum: its name@version package
# specs disambiguate the local zenquant 0.1.2 from the registry
# zenquant 0.1.3 that the zengif dev-dependency pulls in (0.1.0's bare
# `-p zenquant` invocation is ambiguous here).
[package]
name = "zenquant-apidoc"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
zenutils-apidoc = "0.1.1"
